Prevent datetime table cells wrapping

--- a/app/assets/stylesheets/renalware/partials/_tables.scss
+++ b/app/assets/stylesheets/renalware/partials/_tables.scss
@@ -188,7 +188,7 @@ table {
 
     &.col-width-date-time {
       width: 9.5rem;
-      min-width: 9.4rem;
+      min-width: 9.5rem;
     }
 
     &.col-width-reference-without-prefix {
