--- a/app/assets/stylesheets/renalware/table_pdf.scss
+++ b/app/assets/stylesheets/renalware/table_pdf.scss
@@ -123,7 +123,7 @@ a:visited {
 
     &.col-width-date-time {
       width: 9.5rem;
-      min-width: 9.3rem;
+      min-width: 9.5rem;
     }
 
     &.col-width-reference-without-prefix {
